// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product holder properly renders a single product 1`] = `
<div>
  <div>
    <div>
      <img
        src="placeholder"
      />
      <button
        aria-label="Remove from cart"
        type="button"
      />
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        5
      </span>
      <button
        aria-label="Add to cart"
        type="button"
      />
      <div>
        Me smiling
      </div>
    </div>
  </div>
</div>
`;

exports[`Product holder properly renders three products 1`] = `
<div>
  <div>
    <div>
      <img
        src="frown placeholder"
      />
      <button
        aria-label="Remove from cart"
        type="button"
      />
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        9
      </span>
      <button
        aria-label="Add to cart"
        type="button"
      />
      <div>
        Frown
      </div>
    </div>
    <div>
      <img
        src="smile placeholder"
      />
      <button
        aria-label="Remove from cart"
        type="button"
      />
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        2
      </span>
      <button
        aria-label="Add to cart"
        type="button"
      />
      <div>
        Smile
      </div>
    </div>
    <div>
      <img
        src="depression placeholder"
      />
      <button
        aria-label="Remove from cart"
        type="button"
      />
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        6
      </span>
      <button
        aria-label="Add to cart"
        type="button"
      />
      <div>
        Depression
      </div>
    </div>
  </div>
</div>
`;
